--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,56 +1,57 @@
 {
-    "doxdocgen.generic.paramTemplate": "@param[in] {param} ",
+	"doxdocgen.generic.paramTemplate": "@param[in] {param} ",
 	"todo-tree.highlights.defaultHighlight": {
-	"icon": "alert",
-	"type": "text",
-	"foreground": "red",
-	"iconColour": "green"
+		"icon": "alert",
+		"type": "text",
+		"foreground": "red",
+		"iconColour": "green"
 	},
 	"todo-tree.general.tags": [
-	"?",
-	"!",
-	" Step "," step ",
-	" TODO"
+		"?",
+		"!",
+		" Step ",
+		" step ",
+		" TODO"
 	],
 	"todo-tree.highlights.customHighlight": {
-	" Step ": {
-	"foreground": "#7CFC00",
-	"icon": "question",
-	"iconColour": "green",
-	"type": "text-and-comment",
-	"hideFromTree": true
-	},
-	" step ": {
-	"foreground": "#7CFC00",
-	"icon": "question",
-	"iconColour": "green",
-	"type": "text-and-comment",
-	"hideFromTree": true
-	},
-	"?": {
-	"foreground": "yellow",
-	"icon": "question",
-	"iconColour": "yellow",
-	"type": "text-and-comment"
-	},
-	"!": {
-	"foreground": "red",
-	"icon": "issue-opened",
-	"iconColour": "red",
-	"type": "text-and-comment"
-	},
-	" TODO": {
-	"foreground": "white",
-	"icon": "issue-opened",
-	"iconColour": "red",
-	"type": "text-and-comment"
-	}
+		" Step ": {
+			"foreground": "#7CFC00",
+			"icon": "question",
+			"iconColour": "green",
+			"type": "text-and-comment",
+			"hideFromTree": true
+		},
+		" step ": {
+			"foreground": "#7CFC00",
+			"icon": "question",
+			"iconColour": "green",
+			"type": "text-and-comment",
+			"hideFromTree": true
+		},
+		"?": {
+			"foreground": "yellow",
+			"icon": "question",
+			"iconColour": "yellow",
+			"type": "text-and-comment"
+		},
+		"!": {
+			"foreground": "red",
+			"icon": "issue-opened",
+			"iconColour": "red",
+			"type": "text-and-comment"
+		},
+		" TODO": {
+			"foreground": "white",
+			"icon": "issue-opened",
+			"iconColour": "red",
+			"type": "text-and-comment"
+		}
 	},
 	"todo-tree.general.revealBehaviour": "highlight todo",
 	"todo-tree.tree.showCountsInTree": true,
-	"todo-tree.filtering.excludeGlobs":[
-	"**/*.txt",
-	"**/*.md"
+	"todo-tree.filtering.excludeGlobs": [
+		"**/*.txt",
+		"**/*.md"
 	],
 	"files.associations": {
 		"*.cc": "cpp",
@@ -125,6 +126,9 @@
 		"functional": "cpp",
 		"memory_resource": "cpp",
 		"optional": "cpp",
-		"string_view": "cpp"
+		"string_view": "cpp",
+		"random": "cpp",
+		"core": "cpp",
+		"geometry": "cpp"
 	}
 }
