day 12 Initializer.cc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -137,5 +137,9 @@
 		"cinttypes": "cpp",
 		"typeindex": "cpp",
 		"variant": "cpp"
-	}
+	},
+	"cSpell.words": [
+		"Cheirality",
+		"Keypoints"
+	]
 }
